Add '/blog' as baseurl
I still don't understand how this works...

--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,9 @@ footer_text: >
 
 icon: 🔥 # the emoji used as the favicon
 # the base hostname & protocol for your site
-url:
+url: 
 # the subpath of your site, e.g. /blog/
-baseurl:
+baseurl: /blog
 last_updated: false # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 
@@ -77,7 +77,7 @@ pagination:
   enabled: true
 
 # Comments
-disqus_shortname: al-folio # put your disqus shortname
+disqus_shortname: # put your disqus shortname
 
 # -----------------------------------------------------------------------------
 # Collections
