--- a/_ece_config.yml
+++ b/_ece_config.yml
@@ -8,7 +8,7 @@ middle_name: H.
 last_name: Mendoza-Cardenas
 email: cmendoza@udel.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+  A data scientist searching for patterns in brain oscillations
 footer_text: >
   Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
@@ -17,7 +17,7 @@ icon: 🔥 # the emoji used as the favicon
 # the base hostname & protocol for your site
 url: www.eecis.udel.edu
 # the subpath of your site, e.g. /blog/
-baseurl: /~mendoza/
+baseurl: /~mendoza
 last_updated: false # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 
