--- a/_ece_config.yml
+++ b/_ece_config.yml
@@ -15,7 +15,7 @@ footer_text: >
 
 icon: 🔥 # the emoji used as the favicon
 # the base hostname & protocol for your site
-url: www.eecis.udel.edu
+url: https://www.eecis.udel.edu
 # the subpath of your site, e.g. /blog/
 baseurl: /~mendoza
 last_updated: false # set to true if you want to display last updated in the footer
