Update about and config file
Add link to linkedin in the main page and change favicon.

--- a/_ece_config.yml
+++ b/_ece_config.yml
@@ -13,7 +13,7 @@ footer_text: >
   Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
 
-icon: 🔥 # the emoji used as the favicon
+icon: ☀️ # the emoji used as the favicon
 # the base hostname & protocol for your site
 url: https://www.eecis.udel.edu
 # the subpath of your site, e.g. /blog/
@@ -46,7 +46,7 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 
 github_username: chmendoza # your GitHub user name
 twitter_username: # your Twitter handle
-linkedin_username: # your LinkedIn user name
+linkedin_username: carlos-mendoza-cardenas # your LinkedIn user name
 scholar_userid: # your Google Scholar ID
 orcid_id: 0000-0003-2226-865X # your ORCID ID
 medium_username: # your Medium username
